--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 pymsteams==0.1.15
+python-dotenv==0.19.0
 requests==2.26.0
 SQLAlchemy==1.4.23
 urllib3==1.26.6
